--- a/frontend/core/src/main/webapp/static/app/base/editContext.html
+++ b/frontend/core/src/main/webapp/static/app/base/editContext.html
@@ -7,15 +7,15 @@
           <form role="form" name="contextEdit">
             <div class="form-group">
               <label class="sr-only" for="contextTitle">title</label>
-              <input type="text" class="simple-input" id="contextTitle" ng-model="context.title" placeholder="title..." required>
+              <input type="text" id="contextTitle" class="simple-input" ng-model="context.title" placeholder="title..." required>
             </div>
             <div class="form-group">
               <label class="sr-only" for="contextDescription">description</label>
-              <textarea class="simple-input" id="contextDescription" ng-model="context.description" placeholder="description..." expanding-textarea></textarea>
+              <textarea id="contextDescription" class="simple-input" ng-model="context.description" placeholder="description..." expanding-textarea></textarea>
             </div>
             <div class="form-group">
               <label class="sr-only" for="contextLink">url</label>
-              <input type="text" class="simple-input" id="contextLink" ng-model="context.link" placeholder="url...">
+              <input type="text" id="contextLink" class="simple-input" ng-model="context.link" placeholder="url...">
             </div>
           </form>
         </div>
