--- a/frontend/core/src/main/webapp/static/app/base/about.html
+++ b/frontend/core/src/main/webapp/static/app/base/about.html
@@ -1,7 +1,5 @@
-<div ng-if="isMobile" ng-include="'static/app/auth/menu.html'" id="mobile-menu" class="snap-drawer snap-drawer-left"></div>
-<div id="about-container" class="no-slides-container" ng-init="feature='about'" ng-controller="AboutController" snap-drawer>
-  <header class="static-page-header" ng-include="'static/app/main/staticPageHeader.html'"></header>
-  <section ng-hide="isDesktop && isMenuOpen" id="about" class="one-column-grid page" snap-drawer-drag>
+<div id="about-container" ng-controller="AboutController">
+  <section ng-hide="isDesktop && isMenuOpen" id="about" class="one-column-grid page" snap-drawer-drag="about">
     <div class="column">
       <div class="content-container simple-content-container">
         <ul>
@@ -22,5 +20,5 @@
       </div>
     </div>
   </section>
-  <div id="desktop-menu" ng-if="isDesktop && isMenuOpen" ng-include="'static/app/auth/menu.html'"></div>
+  <div ng-if="isDesktop && isMenuOpen" id="desktop-menu" class="desktop-menu-animation" ng-include="'static/app/auth/menu.html'"></div>
 </div>
