--- a/frontend/core/src/main/webapp/static/app/notes/overview.html
+++ b/frontend/core/src/main/webapp/static/app/notes/overview.html
@@ -1,11 +1,11 @@
 <section id="notes-overview" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
-    <div class="page-heading swiper-no-swiping" ng-init="heading='overview'" ng-include="'static/app/main/omnibar.html'"></div>
+    <div class="page-heading swiper-no-swiping" ng-init="heading = 'overview'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible" class="content-container page-content-container">
       <div class="inner-page-content-container">
         <div ng-include="'static/app/base/listsOverview.html'" include-replace></div>
         <section>
-          <h3><a href ng-click="gotoDetails('recent')" class="page-header">recent</a></h3>
+          <h3><a href class="page-header" ng-click="gotoDetails('recent')">recent</a></h3>
         </section>
       </div>
     </div>
