--- a/frontend/core/src/main/webapp/static/app/notes/unsorted.html
+++ b/frontend/core/src/main/webapp/static/app/notes/unsorted.html
@@ -1,20 +1,20 @@
 <section id="notes-unsorted" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
-    <div class="page-heading swiper-no-swiping" ng-init="heading=homeHeading" ng-include="'static/app/main/omnibar.html'"></div>
+    <div class="page-heading swiper-no-swiping" ng-init="heading = 'unsorted'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible" class="content-container page-content-container no-heading-content-container">
       <div class="inner-page-content-container">
         <div>
           <div class="inner-page-content-container" accordion>
-            <div ng-repeat="note in notes | itemsFilter:{name:'unsorted'}" ng-init="newNote = {}">
+            <div ng-if="showContent('notes')" ng-repeat="note in notes | itemsFilter:{name:'unsorted'}" ng-init="newNote = {}">
               <div accordion-title="note" edit-item="editNote(note)" edit-item-title="editNoteTitle(note)" has-complete="false" toggle-complete>
-                <div class="teaser" ng-if="note.content">
-                  <a href ng-click="editNote(note)" id="note-teaser" ng-bind="getNoteContentTeaser(note)"></a>
+                <div ng-if="note.content" class="teaser">
+                  <a href id="note-teaser" ng-bind="getNoteContentTeaser(note)" ng-click="editNote(note)"></a>
                 </div>
               </div>
-              <div class="accordion-body" ng-if="isOpen(note)">
+              <div ng-if="isOpen(note)" class="accordion-body">
                 <div class="accordion-inner" ng-include="'static/app/notes/noteActions.html'"></div>
               </div>
-              <div class="teaser-empty" ng-if="!note.content"></div>
+              <div ng-if="!note.content" class="teaser-empty"></div>
             </div>
             <div ng-include="'static/app/notes/addNote.html'"></div>
           </div>
