--- a/frontend/core/src/main/webapp/static/app/tasks/dates.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/dates.html
@@ -1,6 +1,6 @@
 <section id="tasks-dates" class="two-column-grid page single-lineheight" ng-controller="DatesController">
   <div class="column" ng-controller="TasksController">
-    <div class="page-heading swiper-no-swiping" ng-init="heading=homeHeading" ng-include="'static/app/main/omnibar.html'"></div>
+    <div class="page-heading swiper-no-swiping" ng-init="heading = 'dates'; omnibarFeature = 'tasks'" ng-include="'static/app/main/omnibar.html'"></div>
     <div ng-hide="omnibarVisible && isActiveSlide('home')" class="content-container page-content-container omnibar-animation">
       <div ng-if="isDatepickerVisible" class="swiper-no-swiping" data-snap-ignore="true" datepicker></div>
       <div class="swiper-container vertical-slides" swiper-container="tasks/home" swiper-type="page" expected-slides="weekdays.length">
@@ -11,12 +11,12 @@
           <div class="swiper-slide" ng-repeat="date in weekdays track by date.weekdayIndex" swiper-slide="tasks/home/{{date.weekday}}" slide-index="$index">
             <div class="inner-slide-content-container">
               <section id="date" class="date">
-                <h3 class="date-heading" ng-hide="isDatepickerVisible" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
+                <h3 ng-hide="isDatepickerVisible" class="date-heading" ng-click="setDatepickerVisible()">{{date.displayDate}}</h3>
                 <div>
                   <div class="inner-page-content-container" accordion>
-                    <div ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
+                    <div ng-if="showContent('tasks')" ng-repeat="task in tasks | tasksByDate:date.yyyymmdd">
                       <div accordion-title="task" edit-item="editTask(task)" edit-item-title="editTaskTitle(task)" has-complete="true" toggle-complete="taskChecked(task)"></div>
-                      <div class="accordion-body" ng-if="isOpen(task)">
+                      <div ng-if="isOpen(task)" class="accordion-body">
                         <div class="accordion-inner" ng-include="'static/app/tasks/taskActions.html'"></div>
                       </div>
                     </div>
