--- a/frontend/core/src/main/webapp/static/app/base/editList.html
+++ b/frontend/core/src/main/webapp/static/app/base/editList.html
@@ -9,9 +9,9 @@
               <label class="sr-only" for="listTitle">title</label>
               <input type="text" class="simple-input" id="listTitle" ng-model="list.title" placeholder="title..." required>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
               <label class="sr-only" for="listDescription">description</label>
-              <textarea class="simple-input" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea></textarea>
+              <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="listDescription" ng-model="list.description" placeholder="description..." expanding-textarea></textarea>
             </div>
             <div class="form-group">
               <label class="sr-only" for="listLink">url</label>
