--- a/frontend/core/src/main/webapp/static/app/main/editItem.html
+++ b/frontend/core/src/main/webapp/static/app/main/editItem.html
@@ -9,9 +9,9 @@
               <label class="sr-only" for="itemTitle">title</label>
               <input type="text" class="simple-input font-bold" id="itemTitle" ng-model="item.title" placeholder="title..." maxlength="128" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}">
               <label class="sr-only" for="itemDescription">description</label>
-              <textarea class="simple-input" id="itemDescription" ng-model="item.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
+              <textarea class="simple-input" ng-style="{maxHeight: getEditSimpleDescriptionMaxHeight()}" id="itemDescription" ng-model="item.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
             </div>
             <div class="form-group">
               <label class="sr-only" for="itemLink">url</label>
