--- a/frontend/core/src/main/webapp/static/app/notes/editNote.html
+++ b/frontend/core/src/main/webapp/static/app/notes/editNote.html
@@ -9,9 +9,9 @@
               <label class="sr-only" for="noteTitle">title</label>
               <input type="text" class="simple-input font-bold" id="noteTitle" ng-model="note.title" placeholder="title..." maxlength="128" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-style="{maxHeight: getEditNoteContentMaxHeight()}">
               <label class="sr-only" for="noteDescription">content</label>
-              <textarea class="simple-input" id="noteDescription" ng-model="note.content" placeholder="content..." maxlength="1024" expanding-textarea></textarea>
+              <textarea class="simple-input" ng-style="{maxHeight: getEditNoteContentMaxHeight()}" id="noteDescription" ng-model="note.content" placeholder="content..." maxlength="1024" expanding-textarea></textarea>
             </div>
           </form>
         </div>
