--- a/frontend/core/src/main/webapp/static/app/tasks/editTask.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/editTask.html
@@ -11,9 +11,9 @@
               <label class="sr-only" for="taskTitle">title</label>
               <input type="text" id="taskTitle" class="simple-input font-bold" ng-model="task.title" placeholder="title..." maxlength="128" required>
             </div>
-            <div class="form-group">
+            <div class="form-group" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" >
               <label class="sr-only" for="taskDescription">description</label>
-              <textarea id="taskDescription" class="simple-input" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
+              <textarea id="taskDescription" class="simple-input" ng-style="{maxHeight: getEditTaskDescriptionMaxHeight()}" ng-model="task.description" placeholder="description..." maxlength="1024" expanding-textarea></textarea>
             </div>
 
             <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
