--- a/frontend/core/src/main/webapp/static/app/main/editHeader.html
+++ b/frontend/core/src/main/webapp/static/app/main/editHeader.html
@@ -1,4 +1,4 @@
-<nav>
+<nav id="edit-header">
   <ul class="horizontally-justified">
     <li class="justified-element">
       <button type="button" class="button transparent-button font-bold" ng-click="cancelEdit()">cancel</button>
