Moved owner prefix and active UUID handling to dedicated UISessionService

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -62,6 +62,7 @@
     <script src="static/app/base/SnapService.js"></script>
     <script src="static/app/base/SwiperService.js"></script>
     <script src="static/app/base/TagsService.js"></script>
+    <script src="static/app/base/UISessionService.js"></script>
     <script src="static/app/base/UserSessionService.js"></script>
     <script src="static/app/base/accordionDirective.js"></script>
     <script src="static/app/base/accordionTitleDirective.js"></script>
