--- a/frontend/core/src/main/webapp/static/app/auth/login.html
+++ b/frontend/core/src/main/webapp/static/app/auth/login.html
@@ -2,7 +2,7 @@
   <section id="login" class="one-column-grid fixed-height page">
     <div class="column">
       <div class="banner">
-        <span class="icon-logo-with-text"></span>
+        <span class="icon-logo-with-text padding-bottom"></span>
       </div>
       <div class="content">
         <form role="form" id="login-form" name="loginForm" novalidate>
