--- a/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskActions.html
@@ -2,17 +2,12 @@
   <div ng-include="'static/app/tasks/taskCoreFields.html'"></div>
   <div class="item-actions">
     <ul class="button-row">
-      <li class="button-container" ng-class="getDoneButtonClass(task)">
+      <li class="button-container left-of-two">
         <button type="button" class="normal-button" ng-click="taskQuickEditDone(task)">
           done
         </button>
       </li>
-      <li ng-if="!task.relationships.list" class="button-container" ng-class="getSubtaskButtonClass(task)">
-        <button type="button" class="default-button" ng-click="taskToList(task)" ng-disabled="!online">
-          make list
-        </button>
-      </li>
-      <li class="button-container" ng-class="getDeleteButtonClass(task)">
+      <li class="button-container right-of-two">
         <button type="button" class="delete-button" ng-click="deleteTask(task)">
           delete
         </button>
