Undebugged loading animation

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -41,6 +41,7 @@
     <script src="static/common/dateInputDirective.js"></script>
     <script src="static/common/dynamicPlaceholderDirective.js"></script>
     <script src="static/common/includeReplaceDirective.js"></script>
+    <script src="static/common/loadingAnimationDirective.js"></script>
     <script src="static/common/passwordMatchDirective.js"></script>
     <script src="static/common/swiper.js"></script>
 
