--- a/frontend/core/src/main/webapp/static/app/notes/details.html
+++ b/frontend/core/src/main/webapp/static/app/notes/details.html
@@ -1,7 +1,7 @@
 <section id="notes-details" class="two-column-grid page" ng-controller="NotesController">
   <div class="column">
     <div class="page-heading swiper-no-swiping" ng-init="heading = 'notes'; omnibarFeature = 'notes'" ng-include="'static/app/main/omnibar.html'"></div>
-    <div ng-hide="omnibarVisible" class="content-container page-content-container">
+    <div ng-hide="omnibarVisible && isActiveSlide('details')" class="content-container page-content-container">
       <div class="swiper-container vertical-slides" swiper-container="notes/details" swiper-type="page" expected-slides="count = lists.length + 1">
         <div class="swiper-wrapper">
           <div class="swiper-slide" ng-repeat="list in lists" swiper-slide="notes/details/{{list.uuid}}" slide-index="$index" ng-init="newNote = {relationships: {list: list.uuid}}">
